<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/viewMain2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6sp"
            android:stretchColumns="0" >

            <TableRow>

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:singleLine="false" />

                <TextView
                    android:theme="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/lblamount" >
                </TextView>
            </TableRow>

            <TableRow>
                <com.farrusco.projectclasses.widget.ImageViewExt
                    android:id="@+id/imgPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="@dimen/normal_200sp"
                    android:layout_margin="@dimen/margin_default"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/description"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <com.farrusco.projectclasses.widget.wheelpicker.TextWheelPickerView
                    android:id="@+id/picker_view"
                    android:layout_width="@dimen/normal_90sp"
                    android:layout_height="@dimen/normal_150sp"
                    android:theme="@style/Project.TextViewStyle"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/wheel_bg"/>
            </TableRow>
        <TableRow>
            <com.farrusco.projectclasses.widget.ButtonExt
                android:id="@+id/btnPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/Project.ButtonStyle"
                android:text="@string/settings_choose_file"
                android:gravity="center_vertical"  />
        </TableRow>
    </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6sp"
            android:stretchColumns="1" >
            <TableRow android:layout_width="match_parent" >

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbldescription"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:textStyle="bold" />

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:id="@+id/txtOms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:singleLine="false"
                    android:text="@string/description"
                    android:theme="@style/TextView" />

            </TableRow>

            <TableRow android:layout_width="match_parent" >

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblordercode"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:textStyle="bold" />

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:id="@+id/txtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow android:layout_width="match_parent" >

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:id="@+id/lblPrijs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lblprice"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:textStyle="bold" />
                <include
                    android:id="@+id/hdrPrijs"
                    layout="@layout/field_amount_vw" />
            </TableRow>

            <TableRow android:layout_width="match_parent" >

                <com.farrusco.projectclasses.widget.TextViewExt
                    android:theme="@style/TextView"
                    android:id="@+id/lblSubTot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4sp"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:text="@string/totalsub"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/hdrSubTot"
                    layout="@layout/field_amount_vw" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</FrameLayout>